Attempt to fix iPhone letter-spacing

--- a/styles/global-styles.css
+++ b/styles/global-styles.css
@@ -34,7 +34,7 @@ html, body {
 	font-size: 19px;
 	font-family: var(--sans-font), sans-serif;
 	font-weight: normal;
-	letter-spacing: 0;
+	/* letter-spacing: 0; */
 	color: var(--dark-blue);
 }
 
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5 {
 	margin: 0 0 20px 0;
 	font-family: var(--serif-font), serif;
 	font-weight: bold;
-	letter-spacing: -0.5px;
+	/* letter-spacing: -0.5px; */
 }
 
 p {
@@ -76,9 +76,9 @@ p {
 
 em {
 	font-family: var(--serif-font);
-	font-weight: 800;
+	font-weight: bold;
 	font-style: normal;
-	letter-spacing: -0.5px;
+	/* letter-spacing: -0.5px; */
 }
 
 small {
