--- a/styles/material-icons.css
+++ b/styles/material-icons.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'Material Icons';
 	font-style: normal;
-	font-weight: 400;
+	font-weight: normal;
 	src: url(https://fonts.gstatic.com/s/materialicons/v46/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');
 }
 
